# xrpatcher

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  format.yml  lint.yml  publish-pypi.yml  release.yml  tests.yml  typecheck.yml
examples/: caching.py  grain_integration.py  patching_cc.py  pytorch_integration.py  torchgeo_datamodule_integration.py  xrpatcher_concat_torch_dataloading.py
notebooks/: patching_cc.ipynb  pytorch_integration.ipynb  xrpatcher_concat_torch_dataloading.ipynb
tests/: test_api.py  test_base.py  test_edge_cases.py  test_errors.py  test_examples_patching_cc.py  test_examples_pytorch.py  test_examples_torchgeo.py  test_grain_integration.py  test_indexing.py  test_utils.py
xrpatcher/: __init__.py
xrpatcher/_src/: base.py  exceptions.py  test_base.py  test_utils.py  utils.py
