[tool.poetry]
name = "xrpatcher"
description = "A ML-oriented generic patcher for xarray data structures."
authors = [
    "J. Emmanuel Johnson <jemanjohnson34@gmail.com>",
    "Quentin Febvre <quentin.febvre@gmail.com>"
    ]
version = "0.0.1"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jejjohnson/xrpatcher"
keywords = ["xarray", "patcher", "pytorch"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha"

]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
xarray = ">=2022.3"
urllib3 = "1.26.15"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
xarray-dataclasses = "^1.6.0"
pre-commit = "^3.3.2"
black = "^23.3.0"
isort = "^5.12.0"
beartype = "^0.14.0"
ruff = "^0.0.270"
nbqa = "^1.7.0"
einops = "^0.6.1"

[tool.poetry.group.jlab.dependencies]
ipykernel = "^6.23.1"
autoroot = "^1.0.0"

[tool.poetry.group.jbook.dependencies]
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
sphinx-proof = "^0.1.3"
jupytext = "^1.14.5"
myst-nb = "^0.17.2"

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["xrpatcher"]
