[project]
name = "xrpatcher"
version = "0.0.10"
description = "A ML-oriented generic patcher for xarray data structures."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
    {name="Quentin Febvre", email="quentin.febvre@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["xarray", "patcher", "pytorch"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "xarray>=2024.1",
    "tqdm>=4.65",
]

[project.urls]
Repository = "https://github.com/jejjohnson/xrpatcher"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "beartype>=0.18",
    "einops>=0.8",
    "pre-commit>=3.7",
    "xarray-dataclasses>=1.6",
]
lint = [
    "ruff>=0.9",
]
typecheck = [
    "ty>=0.0.1a6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",
    "jupytext>=1.16",
    "ipykernel>=6.29",
]
examples = [
    "einops>=0.8",
    "grain>=0.2",
    "jax>=0.4",
    "matplotlib>=3.8",
    "pooch>=1.8",
    "torch>=2.0",
    "xarray-dataclasses>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xrpatcher"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=xrpatcher --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["xrpatcher"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
